; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/mvm/extr_d3.c_iwl_mvm_find_max_pn.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/mvm/extr_d3.c_iwl_mvm_find_max_pn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_key_conf = type { i32 }
%struct.iwl_mvm_key_pn = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32** }
%struct.ieee80211_key_seq = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@IEEE80211_CCMP_PN_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.ieee80211_key_conf*, %struct.iwl_mvm_key_pn*, %struct.ieee80211_key_seq*, i32, i32)* @iwl_mvm_find_max_pn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @iwl_mvm_find_max_pn(%struct.ieee80211_key_conf* %0, %struct.iwl_mvm_key_pn* %1, %struct.ieee80211_key_seq* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ieee80211_key_conf*, align 8
  %7 = alloca %struct.iwl_mvm_key_pn*, align 8
  %8 = alloca %struct.ieee80211_key_seq*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store %struct.ieee80211_key_conf* %0, %struct.ieee80211_key_conf** %6, align 8
  store %struct.iwl_mvm_key_pn* %1, %struct.iwl_mvm_key_pn** %7, align 8
  store %struct.ieee80211_key_seq* %2, %struct.ieee80211_key_seq** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %14 = load %struct.ieee80211_key_seq*, %struct.ieee80211_key_seq** %8, align 8
  %15 = getelementptr inbounds %struct.ieee80211_key_seq, %struct.ieee80211_key_seq* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %11, align 8
  %18 = load %struct.ieee80211_key_conf*, %struct.ieee80211_key_conf** %6, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load %struct.ieee80211_key_seq*, %struct.ieee80211_key_seq** %8, align 8
  %21 = call i32 @ieee80211_get_key_rx_seq(%struct.ieee80211_key_conf* %18, i32 %19, %struct.ieee80211_key_seq* %20)
  store i32 1, i32* %12, align 4
  br label %22

22:                                               ; preds = %47, %5
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %50

26:                                               ; preds = %22
  %27 = load %struct.iwl_mvm_key_pn*, %struct.iwl_mvm_key_pn** %7, align 8
  %28 = getelementptr inbounds %struct.iwl_mvm_key_pn, %struct.iwl_mvm_key_pn* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = load i32, i32* %12, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32**, i32*** %33, align 8
  %35 = load i32, i32* %9, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32*, i32** %34, i64 %36
  %38 = load i32*, i32** %37, align 8
  store i32* %38, i32** %13, align 8
  %39 = load i32*, i32** %11, align 8
  %40 = load i32*, i32** %13, align 8
  %41 = load i32, i32* @IEEE80211_CCMP_PN_LEN, align 4
  %42 = call i64 @memcmp(i32* %39, i32* %40, i32 %41)
  %43 = icmp sle i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %26
  %45 = load i32*, i32** %13, align 8
  store i32* %45, i32** %11, align 8
  br label %46

46:                                               ; preds = %44, %26
  br label %47

47:                                               ; preds = %46
  %48 = load i32, i32* %12, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %12, align 4
  br label %22

50:                                               ; preds = %22
  %51 = load i32*, i32** %11, align 8
  ret i32* %51
}

declare dso_local i32 @ieee80211_get_key_rx_seq(%struct.ieee80211_key_conf*, i32, %struct.ieee80211_key_seq*) #1

declare dso_local i64 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
